--- a/.github/workflows/go-mnd.yml
+++ b/.github/workflows/go-mnd.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Run go-mnd
         uses: tommy-muehle/go-mnd@master
         with:
-          args: ./...
+          args: --ignored-functions=strconv.FormatInt --ignored-files=telegrambot/endpoint/pole/pole.go,internal/timekit/engine.go ./...
