--- a/.github/workflows/go-mnd.yml
+++ b/.github/workflows/go-mnd.yml
@@ -12,8 +12,8 @@ jobs:
 
   tests:
     runs-on: ubuntu-latest
-    env:
-      GO111MODULE: on
+#    env:
+#      GO111MODULE: on
     steps:
       - uses: actions/checkout@v2
 
