--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -11,7 +11,14 @@
 #
 name: "CodeQL"
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - '**'
+  pull_request:
+    # The branches below must be a subset of the branches above
+    branches:
+      - '**'
   schedule:
     - cron: '25 7 * * 3'
 
