--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,13 +1,21 @@
-on: [push, pull_request]
 name: Go
+
+on:
+  push:
+    branches:
+      - '**'
+  pull_request:
+    branches:
+      - '**'
+
 jobs:
+
   build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
     steps:
-      - name: Fetch Repository
       - uses: actions/checkout@v2
 
       - name: Set up Go
