--- a/.github/workflows/gosec.yml
+++ b/.github/workflows/gosec.yml
@@ -1,10 +1,18 @@
 name: Run Gosec
-on: [push, pull_request]
+
+on:
+  push:
+    branches:
+      - '**'
+  pull_request:
+    branches:
+      - '**'
+
 jobs:
+
   tests:
     runs-on: ubuntu-latest
     steps:
-      - name: Fetch Repository
       - uses: actions/checkout@v2
 
       - name: Run Gosec Security Scanner
